# codegrep

./: .clangd  CMakeLists.txt  build.sh
include/codegrep/: codegrep.h  query.h  result.h  searcher.h
src/: hit_scanner.cpp  process_posix.cpp  rg_command.cpp  ripgrep.cpp  scoring.cpp  snippet_builder.cpp
src/internal/: hit_scanner.h  process_posix.h  rg_command.h  ripgrep.h  scoring.h  snippet_builder.h
